# deeznuts

./: .gitignore  Dockerfile  README.md  compose.yaml  meson.build  pom.xml
.github/workflows/: maven.yml
include/: decoder.hxx  encoder.hxx  integral_concepts.hxx
src/: deeznuts.cxx
src/main/java/dev/seffra/deeznuts/: DeezNutS.java
src/main/java/dev/seffra/deeznuts/codec/: Dns.java  Header.java  OpCode.java  ResponseCode.java  UnknownOpCodeException.java  UnknownResponseCodeException.java
src/test/java/dev/seffra/deeznuts/: DeezNutSTest.java  QueryTest.java  ResponseCodeTest.java  ResponseTest.java
tests/: decoder.cxx  meson.build
